--- a/examples/richtext.html
+++ b/examples/richtext.html
@@ -18,46 +18,33 @@
   <style>
     body { font-family: sans-serif; }
 
-      /* TODO: Move this to its own place. */
     #wrapper {
+      position: relative;
       border: 1px solid #ccc;
       border-radius: 3px;
-      width: 800px;
+      width: 960px;
+      height: 580px;
     }
 
-    #firepad {
-      width: 600px;
-      float: left;
+    #wrapper .firepad-userlist {
+      position: absolute;
+      height: 580px;
+      width: 175px;
     }
 
-    #firepad .CodeMirror {
-      height: 400px;
-    }
-
-    .firepad-userlist {
-      border-left: 1px solid #ccc;
-      padding-left: 5px;
-      float:left;
-      width:194px;
-      height: 430px;
-    }
-
-    .firepad-userlist-color-indicator {
-      float: left;
-      width: 16px;
-      height: 16px;
-    }
-
-    .firepad-clear {
-      clear: both;
+    #wrapper .firepad {
+      position: absolute;
+      left: 175px;
+      width: 785px;
+      height: 580px;
     }
   </style>
 </head>
 
 <body>
   <div id="wrapper">
-    <div id="firepad"></div>
     <div id="userlist"></div>
+    <div id="firepad"></div>
     <div class="firepad-clear"></div>
   </div>
 
