Update styling for editor / userlist.
Also:
* Move index.html to home.html until launch.
* Refresh firepad.js, etc.

--- a/index.html
+++ b/index.html
@@ -1,143 +1,1 @@
-<!doctype html>
-<html>
-
-<head>
-  <meta charset="utf-8" />
-  <script src="https://cdn.firebase.com/v0/firebase.js"></script>
-
-  <script src="examples/codemirror/lib/codemirror.js"></script>
-  <link rel="stylesheet" href="examples/codemirror/lib/codemirror.css" />
-
-  <script src="build/firepad.js"></script>
-  <link rel="stylesheet" href="build/firepad.css" />
-
-  <link rel="stylesheet" href="css/global.css" />
-  <link rel="stylesheet" href="css/index.css" />
-</head>
-
-<body>
-  <a href="https://github.com/firebase/firepad">
-    <img style="position: absolute; top: 0; left: 0; border: 0; z-index: 1;" src="images/fork_on_github.png" alt="Fork me on GitHub">
-  </a>
-  <div id="above-fold">
-    <div id="fork-on-github"></div>
-    <div id="bg-left">
-      <div class="above-fold-shadow"></div>
-    </div>
-    <div id="bg-right">
-      <div class="above-fold-shadow"></div>
-    </div>
-    <div id="above-fold-content">
-      <div id="header-links" class="clearfix">
-        <a href="index.html">Home</a>
-        <a href="examples/">Examples</a>
-        <a href="docs/">Documentation</a>
-        <a href="demo.html">Demo</a>
-      </div>
-      <div id="page-title-container" class="clearfix">
-        <div id="page-title">Introducing</div>
-        <div id="logo"></div>
-      </div>
-      <div id="page-subtitle">Open source collaborative text editing</div>
-      <a href="https://github.com/firebase/firepad" id="download-on-github"><img src="images/download.png"></a>
-      <div id="firepad-container">
-        <div id="firepad-userlist"></div>
-        <div id="firepad"></div>
-      </div>
-      <div class="above-fold-shadow"></div>
-    </div>
-  </div>
-
-  <div id="below-fold">
-    <div id="below-fold-container">
-      <div class="below-fold-content">
-        <div id="uses" class="clearfix">
-          <div class="uses-col clearfix">
-            <div class="title">Usage Examples</div>
-            <div class="clearfix">
-              <div class="icon"><img src="images/use_richtext.png"></div>
-              <div class="text">
-                <div class="use-title">Rich Text Editing</div>
-                Blah blah can power rich-text. Link.
-              </div>
-            </div>
-            <div class="clearfix">
-              <div class="icon"><img src="images/use_coding.png"></div>
-              <div class="text">
-                <div class="use-title">Code Editing</div>
-                Blah blah can power coding. Link.
-              </div>
-            </div>
-            <div class="clearfix">
-              <div class="icon"><img src="images/use_auth.png"></div>
-              <div class="text">
-                <div class="use-title">Integrated Authentication</div>
-                Blah blah can power rich-text. Link.
-              </div>
-            </div>
-          </div>
-          <div class="uses-col clearfix">
-            <div class="title">Real-world Use</div>
-            <div class="clearfix">
-              <div class="icon"><img src="images/user_socrates.png"></div>
-              <div class="text">
-                <div class="use-title">socrates.io</div>
-                Socrates.io is blah blah.
-              </div>
-            </div>
-            <div class="clearfix">
-              <div class="icon"></div>
-              <div class="text">
-                <div class="use-title">Somebody</div>
-                Blah blah blah.
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="below-fold-content separator">
-        <div id="faq" class="clearfix">
-          <div class="faq-col">
-            <div class="faq-question">
-              <div class="faq-title">What is Firepad?</div>
-              Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics. Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics.
-            </div>
-            <div class="faq-question">
-              <div class="faq-title">This question wraps 2 lines</div>
-              Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics. Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics.
-            </div>
-            <div class="faq-question">
-              <div class="faq-title">What is Firepad?</div>
-              Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics. Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics.
-            </div>
-          </div>
-          <div class="faq-col">
-            <div class="faq-question">
-              <div class="faq-title">What can I do with it?</div>
-              Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics. Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics. Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics. Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics. Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics. Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics.
-            </div>
-            <div class="faq-question">
-              <div class="faq-title">This is a fourth question?</div>
-              Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics. Freegan before they sold out mumblecore, cardigan swag VHS yr laborum id iphone readymade non gastropub semiotics.
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="footer">
-      <div id="footer-links">
-        <a href="index.html">Home</a>
-        <a href="index.html">GitHub Project</a>
-        <a href="mailto:firepad@firebase.com">Contact</a>
-      </div>
-      <div id="powered-by-firebase">
-        <a href="https://www.firebase.com/"><img src="images/powered_by_firebase.png" width="193" height="51"></a>
-      </div>
-    </div>
-  </div>
-
-  <script type="text/javascript">
-    var
-  </script>
-</body>
-</html>
+Hello world.
