Rework background image to use gradient + opacity image mask.

--- a/home.html
+++ b/home.html
@@ -23,31 +23,27 @@
     <img style="position: absolute; top: 0; left: 0; border: 0; z-index: 1;" src="images/fork_on_github.png" alt="Fork me on GitHub">
   </a>
   <div id="above-fold">
-    <div id="fork-on-github"></div>
-    <div id="bg-left">
-      <div class="above-fold-shadow"></div>
-    </div>
-    <div id="bg-right">
-      <div class="above-fold-shadow"></div>
-    </div>
-    <div id="above-fold-content">
-      <div id="header-links" class="clearfix">
-        <a href="index.html">Home</a>
-        <a href="examples/">Examples</a>
-        <a href="docs/">Documentation</a>
-        <a href="demo.html">Demo</a>
+    <div class="above-fold-shadow"></div>
+    <div id="above-fold-bg-tile">
+      <div id="fork-on-github"></div>
+      <div id="above-fold-content">
+        <div id="header-links" class="clearfix">
+          <a href="index.html">Home</a>
+          <a href="examples/">Examples</a>
+          <a href="docs/">Documentation</a>
+          <a href="demo.html">Demo</a>
+        </div>
+        <div id="page-title-container" class="clearfix">
+          <div id="page-title">Introducing</div>
+          <div id="logo"></div>
+        </div>
+        <div id="page-subtitle">Open source collaborative text editing</div>
+        <a href="https://github.com/firebase/firepad" id="download-on-github"><img src="images/download.png"></a>
+        <div id="firepad-container">
+          <div id="firepad-userlist"></div>
+          <div id="firepad"></div>
+        </div>
       </div>
-      <div id="page-title-container" class="clearfix">
-        <div id="page-title">Introducing</div>
-        <div id="logo"></div>
-      </div>
-      <div id="page-subtitle">Open source collaborative text editing</div>
-      <a href="https://github.com/firebase/firepad" id="download-on-github"><img src="images/download.png"></a>
-      <div id="firepad-container">
-        <div id="firepad-userlist"></div>
-        <div id="firepad"></div>
-      </div>
-      <div class="above-fold-shadow"></div>
     </div>
   </div>
 
