Implement demo page.  Misc. tweaks.

--- a/home.html
+++ b/home.html
@@ -25,7 +25,6 @@
   <div id="top">
     <div id="top-shadow"></div>
     <div id="top-bg-tile">
-      <div id="fork-on-github"></div>
       <div id="top-content">
         <div id="header-links" class="clearfix">
           <a href="./">Home</a>
@@ -130,7 +129,7 @@
         <a href="mailto:firepad@firebase.com">Contact</a>
       </div>
       <div id="powered-by-firebase">
-        <a href="https://www.firebase.com/"><img src="images/powered_by_firebase.png" width="193" height="51"></a>
+        <a href="https://www.firebase.com/"><img src="images/powered-by-firebase-dim.png"></a>
       </div>
     </div>
   </div>
