--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/global.css" />
 </head>
 
-<body class="home">
+<body class="home-page">
   <a href="https://github.com/firebase/firepad">
     <img style="position: absolute; top: 0; left: 0; border: 0; z-index: 1;" src="images/fork_on_github.png" alt="Fork me on GitHub">
   </a>
