--- a/examples/index.html
+++ b/examples/index.html
@@ -1,3 +1,56 @@
-<a href="code.html">Code Editing</a><br />
-<a href="richtext.html">Rich Text with Presence</a><br />
+<!doctype html>
+<html>
 
+<head>
+  <meta charset="utf-8" />
+  <title>Firepad - Examples</title>
+  <link rel="stylesheet" href="../css/global.css" />
+</head>
+
+<body class="examples-page">
+  <a href="https://github.com/firebase/firepad">
+    <img style="position: absolute; top: 0; left: 0; border: 0; z-index: 1;" src="../images/fork_on_github.png" alt="Fork me on GitHub">
+  </a>
+  <div id="top">
+    <div id="top-shadow"></div>
+    <div id="top-bg-tile">
+      <div id="fork-on-github"></div>
+      <div id="top-content">
+        <div id="header-links" class="clearfix">
+          <a href="../">Home</a>
+          <a href="../examples/">Examples</a>
+          <a href="../docs/">Documentation</a>
+          <a href="../demo/">Demo</a>
+        </div>
+        <div id="logo-small"></div>
+        <div id="page-title">Examples</div>
+        <div id="page-links">
+          <a href="#" id="code-link">Code Editor</a> |
+          <a href="#" id="rich-text-link">Rich Text Editor</a> |
+          See More Below...
+        </div>
+        <a href="#" id="view-source" target="_blank"><img src="../images/view-source.png"></a>
+        <iframe id="example-container" src="richtext.html"></iframe>
+      </div>
+    </div>
+  </div>
+
+  <div id="bottom">
+    <div id="bottom-container">
+      <div id="example-list" class="bottom-content clearfix"></div>
+    </div>
+    <div id="footer">
+      <div id="footer-links">
+        <a href="../index.html">Home</a>
+        <a href="https://github.com/firebase/firepad">GitHub Project</a>
+        <a href="mailto:firepad@firebase.com">Contact</a>
+      </div>
+      <div id="powered-by-firebase">
+        <a href="https://www.firebase.com/"><img src="../images/powered-by-firebase-dim.png"></a>
+      </div>
+    </div>
+  </div>
+  <script src="../js/jquery-1.9.1.min.js"></script>
+  <script src="../js/examples.js"></script>
+</body>
+</html>
