--- a/examples/code.html
+++ b/examples/code.html
@@ -3,39 +3,56 @@
 
 <head>
   <meta charset="utf-8" />
+  <!-- Include Firebase -->
   <script src="https://cdn.firebase.com/v0/firebase.js"></script>
- 
+
+  <!-- Include CodeMirror and its JavaScript mode file -->
   <script src="codemirror/lib/codemirror.js"></script>
   <script src="codemirror/mode/javascript/javascript.js"></script>
   <link rel="stylesheet" href="codemirror/lib/codemirror.css" />
-  
-  <script src="../build/firepad.js"></script>
-  <link rel="stylesheet" href="../build/firepad.css" />
 
-  <script src="examples.js"></script>
+  <!-- Include Firepad -->
+  <script src="firepad.js"></script>
+  <link rel="stylesheet" href="firepad.css" />
+
+  <!-- Helper for generating URLs / Firebase references for example purposes. -->
+  <script src="helpers.js"></script>
+
+  <style>
+    html { height: 100%; }
+    body { margin: 0; height: 100%; position: relative; }
+    /* Height / width / positioning can be customized for your use case.
+       For demo purposes, we make firepad fill the entire browser. */
+    .firepad {
+      position: absolute; left: 0; top: 0; bottom: 0; right: 0; height: auto;
+    }
+  </style>
 </head>
 
 <body>
-  <div id="editor"></div>
+  <div id="firepad-container"></div>
 
   <script>
+    //// Initialize Firebase.
     // var ref = new Firebase('<YOUR FIREBASE URL>');
     var firepadRef = getExampleRef();
 
-    var codeMirror = CodeMirror(document.getElementById('editor'), {
+    //// Create CodeMirror (with line numbers and the JavaScript mode).
+    var codeMirror = CodeMirror(document.getElementById('firepad-container'), {
       lineNumbers: true,
       mode: 'javascript'
     });
     codeMirror.focus();
 
+    //// Create Firepad.
     var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror);
 
+    //// Initialize contents.
     firepad.on('ready', function() {
       if (firepad.isHistoryEmpty()) {
         firepad.setText('// Code Editing with Firepad!\nvar x = 3 + 4;\n');
       }
     });
-
   </script>
 </body>
 </html>
