--- a/examples/userlist.html
+++ b/examples/userlist.html
@@ -14,21 +14,30 @@
   <script src="firepad.js"></script>
   <link rel="stylesheet" href="firepad.css" />
 
+  <!-- Include example userlist. -->
+  <script src="firepad-userlist.js"></script>
+  <link rel="stylesheet" href="firepad-userlist.css" />
+
   <!-- Helper for generating URLs / Firebase references for example purposes. -->
   <script src="helpers.js"></script>
 
   <style>
     html { height: 100%; }
-    body { margin: 0; height: 100%; position: relative; }
-      /* Height / width / positioning can be customized for your use case.
-         For demo purposes, we make firepad fill the entire browser. */
+    body { margin: 0; height: 100%; }
+    /* Height / width / positioning can be customized for your use case.
+       For demo purposes, we make the user list 175px and firepad fill the rest of the page. */
+    .firepad-userlist {
+      position: absolute; left: 0; top: 0; bottom: 0; height: auto;
+      width: 175px;
+    }
     .firepad {
-      position: absolute; left: 0; top: 0; bottom: 0; right: 0; height: auto;
+      position: absolute; left: 175px; top: 0; bottom: 0; right: 0; height: auto;
     }
   </style>
 </head>
 
 <body>
+  <div id="userlist"></div>
   <div id="firepad"></div>
 
   <script>
@@ -40,14 +49,21 @@
     var codeMirror = CodeMirror(document.getElementById('firepad'), { lineWrapping: true });
     codeMirror.focus();
 
-    //// Create Firepad (with rich text toolbar and shortcuts enabled).
+    // Create a random ID to use as our user ID (we must give this to firepad and FirepadUserList).
+    var userId = Math.floor(Math.random() * 9999999999).toString();
+
+    //// Create Firepad (with rich text features and our desired userId).
     var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror,
-        { richTextToolbar: true, richTextShortcuts: true });
+        { richTextToolbar: true, richTextShortcuts: true, userId: userId});
+
+    //// Create FirepadUserList (with our desired userId).
+    var firepadUserList = FirepadUserList.fromDiv(firepadRef.child('users'),
+        document.getElementById('userlist'), userId);
 
     //// Initialize contents.
     firepad.on('ready', function() {
       if (firepad.isHistoryEmpty()) {
-        firepad.setText('Rich-Text editing with Firepad!');
+        firepad.setText('Check out the user list to the left!');
       }
     });
   </script>
