--- a/home.html
+++ b/home.html
@@ -9,11 +9,11 @@
   <script src="examples/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="examples/codemirror/lib/codemirror.css" />
 
-  <script src="build/firepad.js"></script>
-  <link rel="stylesheet" href="build/firepad.css" />
+  <script src="examples/firepad.js"></script>
+  <link rel="stylesheet" href="examples/firepad.css" />
 
-  <script src="build/extras/firepad-userlist.js"></script>
-  <link rel="stylesheet" href="build/extras/firepad-userlist.css" />
+  <script src="examples/firepad-userlist.js"></script>
+  <link rel="stylesheet" href="examples/firepad-userlist.css" />
 
   <link rel="stylesheet" href="css/global.css" />
 </head>
