--- a/home.html
+++ b/home.html
@@ -51,43 +51,43 @@
       <div class="bottom-content">
         <div id="uses" class="clearfix">
           <div class="uses-col clearfix">
-            <div class="title">Usage Examples</div>
+            <div class="uses-title">Usage Examples</div>
             <div class="clearfix">
-              <div class="icon"><img src="images/use_richtext.png"></div>
-              <div class="text">
-                <div class="use-title">Rich Text Editing</div>
-                Blah blah can power rich-text. Link.
+              <div class="use-icon"><img src="images/use_richtext.png"></div>
+              <div class="use-text">
+                <a href="./examples/#richtext" class="use-link">Rich Text Editing</a>
+                Collaboratively edit rich-text documents, complete with a toolbar and keyboard shortcuts.
               </div>
             </div>
             <div class="clearfix">
-              <div class="icon"><img src="images/use_coding.png"></div>
-              <div class="text">
-                <div class="use-title">Code Editing</div>
-                Blah blah can power coding. Link.
+              <div class="use-icon"><img src="images/use_coding.png"></div>
+              <div class="use-text">
+                <a href="./examples/#code" class="use-link">Code Editing</a>
+                Firepad is perfect for creating a rich collaborative coding experience.
               </div>
             </div>
             <div class="clearfix">
-              <div class="icon"><img src="images/use_auth.png"></div>
-              <div class="text">
-                <div class="use-title">Integrated Authentication</div>
-                Blah blah can power rich-text. Link.
+              <div class="use-icon"></div>
+              <div class="use-text">
+                <a href="./examples/" class="use-link">And More...</a>
+                Firepad is extremely flexible and can be customized in a variety of ways.
               </div>
             </div>
           </div>
           <div class="uses-col clearfix">
-            <div class="title">Real-world Use</div>
+            <div class="uses-title">Real-world Uses</div>
             <div class="clearfix">
-              <div class="icon"><img src="images/user_socrates.png"></div>
-              <div class="text">
-                <div class="use-title">socrates.io</div>
-                Socrates.io is blah blah.
+              <!--<div class="use-icon"><img src="images/user_socrates.png"></div>-->
+              <div class="use-text">
+                <a href="http://socrates.io/" class="use-link">socrates.io</a>
+                A collaborative Markdown editor and previewer.
               </div>
             </div>
             <div class="clearfix">
-              <div class="icon"></div>
-              <div class="text">
-                <div class="use-title">Somebody</div>
-                Blah blah blah.
+              <!--<div class="use-icon"></div>-->
+              <div class="use-text">
+                <a href="#" class="use-link">Atlassian Plugin</a>
+                What goes here?
               </div>
             </div>
           </div>
