Remove relative links for demo/ so we can host it at demo.firebaseio.com

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,16 +7,16 @@
 
   <script src="https://cdn.firebase.com/v0/firebase.js"></script>
 
-  <script src="../examples/codemirror/lib/codemirror.js"></script>
-  <link rel="stylesheet" href="../examples/codemirror/lib/codemirror.css" />
+  <script src="dep/examples/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="dep/examples/codemirror/lib/codemirror.css" />
 
-  <script src="../examples/firepad.js"></script>
-  <link rel="stylesheet" href="../examples/firepad.css" />
+  <script src="dep/examples/firepad.js"></script>
+  <link rel="stylesheet" href="dep/examples/firepad.css" />
 
-  <script src="../examples/firepad-userlist.js"></script>
-  <link rel="stylesheet" href="../examples/firepad-userlist.css" />
+  <script src="dep/examples/firepad-userlist.js"></script>
+  <link rel="stylesheet" href="dep/examples/firepad-userlist.css" />
 
-  <link rel="stylesheet" href="../css/demo.css" />
+  <link rel="stylesheet" href="demo.css" />
 </head>
 
 <body>
@@ -41,11 +41,11 @@
         <div id="description">Firepad is an open source collaborative text editor you can add to <b>your</b> own website.
           <div id="learn-more"><a href="http://www.firepad.io/">Learn More &gt;</a></div>
         </div>
-        <a href="../" id="powered-by-firebase"></a>
+        <a href="dep/" id="powered-by-firebase"></a>
       </div>
     </div>
   </div>
-  <script src="../js/jquery-1.9.1.min.js"></script>
-  <script type="text/javascript" src="../js/demo.js"></script>
+  <script src="dep/js/jquery-1.9.1.min.js"></script>
+  <script type="text/javascript" src="demo.js"></script>
 </body>
 </html>
