--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
               <div class="use-icon"><img src="images/use_richtext.png"></div>
               <div class="use-text">
                 <a href="./examples/#richtext" class="use-link">Rich Text Editing</a>
-                Collaboratively edit rich-text documents, complete with a toolbar and keyboard shortcuts.
+                Supports basic rich-text features, with more coming soon!
               </div>
             </div>
             <div class="clearfix">
