Make demo/ URL's absolute so they'll work with demo.firepad.com.
Check in helper scripts for switching between relative (for local development) and absolute (for deployment) url's.

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,14 +7,14 @@
 
   <script src="https://cdn.firebase.com/v0/firebase.js"></script>
 
-  <script src="../examples/codemirror/lib/codemirror.js"></script>
-  <link rel="stylesheet" href="../examples/codemirror/lib/codemirror.css" />
+  <script src="http://www.firepad.io/examples/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="http://www.firepad.io/examples/codemirror/lib/codemirror.css" />
 
-  <script src="../examples/firepad.js"></script>
-  <link rel="stylesheet" href="../examples/firepad.css" />
+  <script src="http://www.firepad.io/examples/firepad.js"></script>
+  <link rel="stylesheet" href="http://www.firepad.io/examples/firepad.css" />
 
-  <script src="../examples/firepad-userlist.js"></script>
-  <link rel="stylesheet" href="../examples/firepad-userlist.css" />
+  <script src="http://www.firepad.io/examples/firepad-userlist.js"></script>
+  <link rel="stylesheet" href="http://www.firepad.io/examples/firepad-userlist.css" />
 
   <link rel="stylesheet" href="demo.css" />
 </head>
@@ -41,11 +41,11 @@
         <div id="description">Firepad is an open source collaborative text editor you can add to <b>your</b> own website.
           <div id="learn-more"><a href="http://www.firepad.io/">Learn More &gt;</a></div>
         </div>
-        <a href="../" id="powered-by-firebase"></a>
+        <a href="http://www.firepad.io/" id="powered-by-firebase"></a>
       </div>
     </div>
   </div>
-  <script src="../js/jquery-1.9.1.min.js"></script>
+  <script src="http://www.firepad.io/js/jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="demo.js"></script>
 </body>
 </html>
