A bunch of work on the docs page.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
       }
     }
   </script>
-
-
 </head>
 
 <body class="home-page">
@@ -45,7 +43,7 @@
           <a href="./">Home</a>
           <a href="examples/">Examples</a>
           <a href="docs/">Documentation</a>
-          <a href="demo/">Demo</a>
+          <a href="http://demo.firepad.io/">Demo</a>
         </div>
         <div id="home-title-container" class="clearfix">
           <div id="home-title">Introducing</div>
