More tweaks to docs / website.

--- a/examples/index.html
+++ b/examples/index.html
@@ -20,7 +20,7 @@
           <a href="../">Home</a>
           <a href="../examples/">Examples</a>
           <a href="../docs/">Documentation</a>
-          <a href="http://demo.firepad.io/">Demo</a>
+          <a href="http://demo.firepad.io/" target="_blank">Demo</a>
         </div>
         <div id="logo-small"></div>
         <div id="page-title">Examples</div>
