--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="./">Home</a>
           <a href="examples/">Examples</a>
           <a href="docs/">Documentation</a>
-          <a href="http://demo.firepad.io/">Demo</a>
+          <a href="http://demo.firepad.io/" target="_blank">Demo</a>
         </div>
         <div id="home-title-container" class="clearfix">
           <div id="home-title">Introducing</div>
