Couple more tweaks.

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
             <div class="clearfix">
               <!--<div class="use-icon"><img src="images/user_socrates.png"></div>-->
               <div class="use-text">
-                <a href="http://socrates.io/" class="use-link">socrates.io</a>
+                <a href="http://socrates.io/" class="use-link" target="_blank">socrates.io</a>
                 A collaborative Markdown editor and previewer.
               </div>
             </div>
             <div class="clearfix">
               <!--<div class="use-icon"></div>-->
               <div class="use-text">
-                <a href="#" class="use-link">Atlassian Plugin</a>
+                <a href="#" class="use-link" target="_blank">Atlassian Plugin</a>
                 What goes here?
               </div>
             </div>
