--- a/index.html
+++ b/index.html
@@ -69,38 +69,38 @@
               <div class="use-icon"><img src="images/use_richtext.png"></div>
               <div class="use-text">
                 <a href="./examples/#richtext" class="use-link">Rich Text Editing</a>
-                Supports basic rich-text features, with more coming soon!
+                Enable synchronous rich-text document editing.
               </div>
             </div>
             <div class="clearfix">
               <div class="use-icon"><img src="images/use_coding.png"></div>
               <div class="use-text">
                 <a href="./examples/#code" class="use-link">Code Editing</a>
-                Firepad is perfect for creating a rich collaborative coding experience.
+                Create a collaborative coding experience.
               </div>
             </div>
             <div class="clearfix">
-              <div class="use-icon"></div>
+              <div class="use-icon" style="margin-top: 21px;"><img src="images/use_ellipsis.png"></div>
               <div class="use-text">
                 <a href="./examples/" class="use-link">And More...</a>
-                Firepad is extremely flexible and can be customized in a variety of ways.
+                Extend Firebase through its API or by contributing to the MIT licensed Github project.
               </div>
             </div>
           </div>
           <div class="uses-col clearfix">
             <div class="uses-title">Real-world Uses</div>
             <div class="clearfix">
-              <!--<div class="use-icon"><img src="images/user_socrates.png"></div>-->
+              <div class="use-icon"><img src="images/user_socrates.png"></div>
               <div class="use-text">
-                <a href="http://socrates.io/" class="use-link" target="_blank">socrates.io</a>
+                <a href="http://socrates.io/" class="use-link" target="_blank">Socrates.io</a>
                 A collaborative Markdown editor and previewer.
               </div>
             </div>
             <div class="clearfix">
-              <!--<div class="use-icon"></div>-->
+              <div class="use-icon" style="margin-top: 9px;"><img src="images/user_stash.png"></div>
               <div class="use-text">
-                <a href="#" class="use-link" target="_blank">Atlassian Plugin</a>
-                What goes here?
+                <a href="#" class="use-link" target="_blank">Stash Plugin from Atlassian</a>
+                Pair programming for the enterprise.
               </div>
             </div>
           </div>
