Various styling tweaks

--- a/examples/index.html
+++ b/examples/index.html
@@ -42,8 +42,8 @@
     <div id="footer">
       <div id="footer-links">
         <a href="../index.html">Home</a>
-        <a href="https://github.com/firebase/firepad">GitHub Project</a>
-        <a href="mailto:firepad@firebase.com">Contact</a>
+        <a href="https://github.com/firebase/firepad" target="_blank">GitHub Project</a>
+        <a href="mailto:firepad@firebase.com?subject=[FirePad Question]" target="_blank">Contact</a>
       </div>
       <div id="powered-by-firebase">
         <a href="https://www.firebase.com/"><img src="../images/powered-by-firebase-dim.png"></a>
