--- a/demo/index.html
+++ b/demo/index.html
@@ -46,7 +46,7 @@
                   <input type="text" readonly="readonly" id="url" />
                 </td>
                 <td>
-                  <a href="https://twitter.com/share" class="twitter-share-button" data-text="Edit a document with me live using Firepad" data-via="FirePadHQ" data-count="none">Tweet</a>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-text="Edit a document with me live using Firepad!" data-via="FirePadHQ" data-count="none">Tweet</a>
                 </td>
                 <td>
                   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
