Adding Social Sharing Buttons and HomePage Spacing

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="examples-page">
-  <a href="https://github.com/firebase/firepad">
+  <a href="https://github.com/firebase/firepad" target="_blank">
     <img style="position: absolute; top: 0; left: 0; border: 0; z-index: 1;" src="../images/fork_on_github.png" alt="Fork me on GitHub">
   </a>
   <div id="top">
@@ -20,17 +20,12 @@
           <a href="../">Home</a>
           <a href="../examples/">Examples</a>
           <a href="../docs/">Documentation</a>
-          <a href="http://demo.firepad.io/" target="_blank">Demo</a>
+          <a href="http://demo.firepad.io/" target="_blank">Private Firepad</a>
         </div>
-        <div id="logo-small"></div>
+        <a href="../">
+          <div id="logo-small"></div>
+        </a>
         <div id="page-title">Examples</div>
-        <div id="page-links">
-          <a href="#" id="rich-text-link">Rich Text Editor</a> |
-          <a href="#" id="code-link">Code Editor</a> |
-          See More Below...
-        </div>
-        <a href="#" id="view-source" target="_blank"><img src="../images/view-source.png"></a>
-        <iframe id="example-container" src="richtext.html"></iframe>
       </div>
     </div>
   </div>
@@ -38,15 +33,25 @@
   <div id="bottom">
     <div id="bottom-container">
       <div id="example-list" class="bottom-content clearfix"></div>
+      <!--
+      <div id="page-links">
+        <a href="#" id="rich-text-link">Rich Text Editor</a> |
+        <a href="#" id="code-link">Code Editor</a> |
+        See More Below...
+      </div>
+      <a href="#" id="view-source" target="_blank"><img src="../images/view-source.png"></a>
+      <iframe id="example-container" src="richtext.html"></iframe>
+      -->
     </div>
     <div id="footer">
       <div id="footer-links">
         <a href="../index.html">Home</a>
+        <a href="docs/">Docs</a>
         <a href="https://github.com/firebase/firepad" target="_blank">GitHub Project</a>
         <a href="mailto:firepad@firebase.com?subject=[FirePad Question]" target="_blank">Contact</a>
       </div>
       <div id="powered-by-firebase">
-        <a href="https://www.firebase.com/"><img src="../images/powered-by-firebase-dim.png"></a>
+        <a href="https://www.firebase.com?utm_source=firepad&utm_medium=exampleapp" target="_blank"><img src="../images/powered-by-firebase-dim.png"></a>
       </div>
     </div>
   </div>
