Fixed wording on front page.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="faq-col">
             <div class="faq-question">
               <div class="faq-title">What is Firepad?</div>
-              Firebase is an open source collaborative text editor. It provides true collaborative editing,
+              Firepad is an open source collaborative text editor. It provides true collaborative editing,
               complete with intelligent <a href="http://en.wikipedia.org/wiki/Operational_transformation">operational transform</a>-based merging and conflict resolution. Some of
               its features include cursor position synchronization, undo / redo, text highlighting,
               user attribution, presence detection, and version checkpointing.
@@ -137,7 +137,7 @@
             <div class="faq-question">
               <div class="faq-title">What can I do with Firepad?</div>
               You can build any application that requires collaborative editing of text documents.
-              Firepad supports both rich text and code editing out-of-the-box, and it's easy to extends for other use cases.
+              Firepad supports both rich text and code editing out-of-the-box, and it's easy to extend for other use cases.
             </div>
             <div class="faq-question">
               <div class="faq-title">How is Firepad different than other collaborative text editors?</div>
@@ -145,7 +145,7 @@
               impractical to use if you're not already using the right server stack. Firepad has no
               server dependencies and instead relies on <a href="https://www.firebase.com">Firebase</a> for real-time data synchronization.
               This means that it's easy to add Firepad to any application, even static websites.
-              All you need to do is drop in the JavaScript file and go.
+              All you need to do is drop in the JavaScript files and go.
             </div>
           </div>
           <div class="faq-col">
@@ -166,7 +166,7 @@
               The MIT License.
             </div>
             <div class="faq-question">
-              <div class="faq-title">What browsers does Firepad support?</div>
+              <div class="faq-title">Which browsers does Firepad support?</div>
               All modern browsers: Chrome, Safari, Opera 11+, IE8+, Firefox 3.6+
             </div>
           </div>
