--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           </div>
           <div class="faq-col">
             <div class="faq-question">
-              <div class="faq-title">What technologies does Firepad use?</div>
+              <div class="faq-title">Which technologies does Firepad use?</div>
               Firepad uses the powerful <a href="http://codemirror.net">CodeMirror</a> editor to render documents, and its operational transform
               code borrows from <a href="https://github.com/Operational-Transformation/ot.js/">ot.js</a>. Behind the scenes, Firepad uses <a href="https://www.firebase.com">Firebase</a> for cloud data storage
               and synchronization.
@@ -163,10 +163,10 @@
             </div>
             <div class="faq-question">
               <div class="faq-title">How is Firepad Licensed?</div>
-              The MIT License.
+              <a href="http://opensource.org/licenses/MIT" target="_blank">MIT</a>
             </div>
             <div class="faq-question">
-              <div class="faq-title">What browsers does Firepad support?</div>
+              <div class="faq-title">Which browsers does Firepad support?</div>
               All modern browsers: Chrome, Safari, Opera 11+, IE8+, Firefox 3.6+
             </div>
           </div>
