Fixed Footer Links

--- a/examples/index.html
+++ b/examples/index.html
@@ -46,7 +46,7 @@
     <div id="footer">
       <div id="footer-links">
         <a href="../index.html">Home</a>
-        <a href="docs/">Docs</a>
+        <a href="../docs/">Docs</a>
         <a href="https://github.com/firebase/firepad" target="_blank">GitHub Project</a>
         <a href="mailto:firepad@firebase.com?subject=[FirePad Question]" target="_blank">Contact</a>
       </div>
